--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,28 +12,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 20:18]
+#+CAPTION: Clock summary at [2016-12-19 Mon 20:26]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *42:57* |       |       | 100.0 |
+| *Total time*                                                                | *43:03* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 42:57   |       |       | 100.0 |
-| Active                                                                      |         | 42:57 |       | 100.0 |
+| Stories                                                                     | 43:03   |       |       | 100.0 |
+| Active                                                                      |         | 43:03 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:03 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.2 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  13.8 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  13.7 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.3 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   8.8 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  27.8 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  27.7 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.6 |
 | COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   9.1 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  17.4 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  17.3 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.7 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.7 |
 | COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.2 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
 | COMPLETED Add support for associations in C#                                |         |       |  3:14 |   7.5 |
+| STARTED Add complete constructor for C# types                               |         |       |  0:03 |   0.1 |
+| STARTED Add support for inheritance in C#                                   |         |       |  0:03 |   0.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -521,9 +523,19 @@ addition, this is not really C++ specific at all; it would apply to
 any kernel and sub-kernel. We should rename it and move it to output
 options.
 
-*** Add complete constructor for C# types                             :story:
+*** STARTED Add complete constructor for C# types                     :story:
+    CLOCK: [2016-12-19 Mon 20:19]--[2016-12-19 Mon 20:22] =>  0:03
 
 We need a constructor that takes in all properties.
+
+Actually we should take on this story after inheritance, because the
+implementation is affected by it.
+
+*** STARTED Add support for inheritance in C#                         :story:
+    CLOCK: [2016-12-19 Mon 20:23]--[2016-12-19 Mon 20:26] =>  0:03
+
+We need to update the templates to cope with single-inheritance in
+C#.
 
 *** Generate AssemblyInfo in C#                                       :story:
 
