--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,30 +12,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-19 Mon 20:26]
+#+CAPTION: Clock summary at [2016-12-19 Mon 21:55]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:03* |       |       | 100.0 |
+| *Total time*                                                                | *44:30* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:03   |       |       | 100.0 |
-| Active                                                                      |         | 43:03 |       | 100.0 |
+| Stories                                                                     | 44:30   |       |       | 100.0 |
+| Active                                                                      |         | 44:30 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:03 |   2.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.2 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  13.7 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.3 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   8.8 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  27.7 |
-| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.6 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   9.1 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  17.3 |
-| COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.7 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  13.3 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.1 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   8.5 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  26.8 |
+| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.5 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   8.8 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  16.8 |
+| COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.6 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.7 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.2 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.0 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
-| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   7.5 |
+| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   7.3 |
 | STARTED Add complete constructor for C# types                               |         |       |  0:03 |   0.1 |
-| STARTED Add support for inheritance in C#                                   |         |       |  0:03 |   0.1 |
+| STARTED Add support for inheritance in C#                                   |         |       |  1:30 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -532,10 +532,16 @@ Actually we should take on this story after inheritance, because the
 implementation is affected by it.
 
 *** STARTED Add support for inheritance in C#                         :story:
+    CLOCK: [2016-12-19 Mon 21:09]--[2016-12-19 Mon 21:55] =>  0:46
+    CLOCK: [2016-12-19 Mon 20:27]--[2016-12-19 Mon 21:08] =>  0:41
     CLOCK: [2016-12-19 Mon 20:23]--[2016-12-19 Mon 20:26] =>  0:03
 
 We need to update the templates to cope with single-inheritance in
 C#.
+
+*** Add visitor support to C#                                         :story:
+
+Implement the visitor formatters for C#.
 
 *** Generate AssemblyInfo in C#                                       :story:
 
